syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.admin.books";
option java_outer_classname = "BookProto";

service BookService {
  // Получить книгу по ID (GET /books/{id})
  rpc GetBookById(GetBookRequest) returns (BookResponse);

  // Получить все книги (GET /books)
  rpc GetAllBooks(EmptyRequest) returns (BookListResponse);
}

message GetBookRequest {
  string id = 1;
}

message EmptyRequest {}

message BookListResponse {
  repeated BookResponse books = 1;
}

message BookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  string genre = 4;
  int32 year = 5;
}
